--- a/core/page/css/layout/fonts.less
+++ b/core/page/css/layout/fonts.less
@@ -10,10 +10,10 @@
 
 
 // fontawesome
-	@import "@{fonts_base_path}/fontawesome/less/fontawesome.less";
-	@import "@{fonts_base_path}/fontawesome/less/solid.less";
-	@import "@{fonts_base_path}/fontawesome/less/brands.less";
-	//@import "./fonts/fontawesome/less/light.less";
+	// @import "@{fonts_base_path}/fontawesome/less/fontawesome.less";
+	// @import "@{fonts_base_path}/fontawesome/less/solid.less";
+	// @import "@{fonts_base_path}/fontawesome/less/brands.less";
+	// //@import "./fonts/fontawesome/less/light.less";
 
 @font-face {
 		font-family: 'Oxygen';
