--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -58,7 +58,9 @@
 					// .background_icon('forward.svg');
 					.build_button('forward.svg', black, 1);
 					transform: scaleX(-1);
-					background-size: 80%;
+					// background-size: 80%;
+					mask-size: 80%;
+					-webkit-mask-size: 80%;
 				}
 
 				.paginator_prev_icon {
@@ -78,7 +80,9 @@
 					//background-image: url('../../themes/default/icons/forward.svg');
 					// .background_icon('forward.svg');
 					.build_button('forward.svg', black, 1);
-					background-size: 80%;
+					// background-size: 80%;
+					mask-size: 80%;
+					-webkit-mask-size: 80%;
 				}
 
 				.paginator_desactive {
