--- a/core/tools/tool_lang/css/tool_lang.less
+++ b/core/tools/tool_lang/css/tool_lang.less
@@ -1,6 +1,14 @@
 
 
 
+// wrapper_tool
+	.wrapper_tool.tool_lang {
+		padding-right: 1em;
+
+	}
+
+
+
 // select style
 	.select_style {
 		width: fit-content;
