Changes in the vector_edito to stabilize it

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1111,6 +1111,11 @@
 							.build_button('save.svg', black, 1);
 						}
 					}
+					.full_screen {
+						&:before {
+							.build_button('full_screen.svg', black, 1);
+						}
+					}
 
 
 					.vector_tool_active {
