--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -2184,6 +2184,10 @@
 
 		.content_data {
 			padding-right: 2.7em !important;
+			max-height: unset !important;
+		}
+		.ul{
+			width: 100% !important;
 		}
 	}
 
