Add color picker to the vector_editor

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1157,6 +1157,13 @@
 							.build_button('full_screen.svg', black, 1);
 						}
 					}
+					.button_color_picker {
+							// .build_button('rectangle.svg', black, 1);
+							border: 0.5px solid #000000;
+					}
+					.color_wheel_contaniner{
+							float: right;
+					}
 
 					.vector_tool_active {
 						opacity: 1;
