Added Mocha and Chai as local libs instead using remote versions

--- a/core/unit_test/html/unit_test.phtml
+++ b/core/unit_test/html/unit_test.phtml
@@ -5,9 +5,9 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- add mocha css, to show results  https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css | https://unpkg.com/mocha/mocha.css -->
-		<link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css">
+		<link rel="stylesheet" href="../../lib/mocha/dist/mocha.css">
 	<!-- add mocha framework code  https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js | https://unpkg.com/mocha/mocha.js -->
-		<script src="https://unpkg.com/mocha/mocha.js"></script>
+		<script src="../../lib/mocha/dist/mocha.js"></script>
 	<script>
 		// minimal setup
 		// mocha.setup({
@@ -22,7 +22,7 @@
 		//mocha.growl(); // <-- Enables web notifications
 	</script>
 	<!-- add chai  https://unpkg.com/chai/chai.js | https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js -->
-		<script src="https://unpkg.com/chai/chai.js"></script>
+		<script src="../../lib/mocha/dist/chai.js"></script>
 	<script>
 		// chai has a lot of stuff, let's make assert global
 		let assert = chai.assert;
