Renamed unit_test.js file (from test.js)

--- a/core/unit_test/html/unit_test.phtml
+++ b/core/unit_test/html/unit_test.phtml
@@ -34,7 +34,7 @@
 		<div id="mocha"></div>
 
 	<!-- tests file -->
-		<script type="module" src="js/test.js"></script>
+		<script type="module" src="js/unit_test.js"></script>
 
 	<!-- run tests! -->
 		<script>
