--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -688,8 +688,10 @@
 							.build_button('edit.svg', black, 1);
 
 							&.tm_preview {
-								// .background_icon('eye.svg');
 								.build_button('eye.svg', black, 1);
+							}
+							&.link {
+								.build_button('link.svg', black, 1);
 							}
 						}
 
