Restore css input height

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -159,7 +159,7 @@
 				outline-offset: 0;
 			}
 			font-size: 1em;
-			// height: 2.0em;
+			height: 2.0em;
 			width: 100%;
 			margin-right: 0.5em;
 
