Change the init_vector editor with dinamic canvas

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -943,7 +943,7 @@
 
 
 					.image  {
-						visibility: hidden;
+						// visibility: hidden;
 						height: 100%;
 						// height: auto;
 						max-height: 100%;
