Css minor changes

--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -27,6 +27,10 @@ html {
 
 
 
+
+
+
+
 // active. selected_wrap
 	.active {
 		//transition: background-color 0.3s ease;
@@ -38,7 +42,7 @@ html {
 		background-color: red !important;
 	}
 // success
-	.success {
+	.save_success {
 		//transition: background-color 0.3s ease;
 		//background-color: green !important;
 	//	animation: success_animation 1.7s ease-out;
