--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1534,15 +1534,12 @@
 		vertical-align: baseline;
 		z-index: unset;
 
-		.tool_header {
+		.footer {
+			text-align: right;
 
-			.label {
-
-			}
-			.description {
-				// font-weight: normal;
-				// font-size: 0.7em;
-				// padding-top: 0.5em;
+			>*{
+				margin: 1em;
+				margin-left: 0;
 			}
 		}
 	}//end dd-modal
@@ -1585,6 +1582,87 @@
 
 
 
+// button . explicit buttons (dialog box etc.)
+	button {
+		// appearance: none;
+		// font-size: .9em;
+		// background-color: #a6a6a6;
+		// border-radius: 0.30em;
+		// color: #ffff;
+		// border: none;
+		padding-left: 1rem;
+		padding-right: 1rem;
+		padding-top: 0.375rem;
+		padding-bottom: 0.375rem;
+
+		// bootstrap
+		display: inline-block;
+		font-weight: 400;
+		color: #212529;
+		text-align: center;
+		vertical-align: middle;
+		cursor: pointer;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		background-color: transparent;
+		border: 1px solid transparent;
+		// padding: .375rem .75rem;
+		font-size: 1rem;
+		line-height: 1.5;
+		border-radius: .25rem;
+		transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+		&.primary {
+			color: #fff;
+			background-color: #007bff;
+			border-color: #007bff;
+		}
+		&.secondary {
+			color: #fff;
+			background-color: #6c757d;
+			border-color: #6c757d;
+		}
+		&.success {
+			color: #fff;
+			background-color: #28a745;
+			border-color: #28a745;
+		}
+		&.danger {
+			color: #fff;
+			background-color: #dc3545;
+			border-color: #dc3545;
+		}
+		&.warning {
+			color: #212529;
+			background-color: #ffc107;
+			border-color: #ffc107;
+		}
+		&.info {
+			color: #fff;
+			background-color: #17a2b8;
+			border-color: #17a2b8;
+		}
+		&.light {
+			color: #212529;
+			background-color: #f8f9fa;
+			border-color: #f8f9fa;
+		}
+		&.dark {
+			color: #fff;
+			background-color: #343a40;
+			border-color: #343a40;
+		}
+		&.link {
+			font-weight: 400;
+			color: #007bff;
+			text-decoration: none;
+		}
+	}
+
+
+
 // buttons with icons
 	.button {
 		// display: none;
@@ -1601,6 +1679,8 @@
 		margin: 0.5em;
 		margin-top: 0.25em;
 		margin-bottom: 0.25em;
+
+
 
 		//.active &, &.link {
 
@@ -2008,21 +2088,6 @@
 			margin: 0;
 		}
 	}//end .component_message
-
-
-
-// button
-	button {
-		appearance: none;
-		font-size: .9em;
-		background-color: #a6a6a6;
-		border-radius: 0.30em;
-		cursor: pointer;
-		color: #ffff;
-		border: none;
-		padding-left: 0.75em;
-		padding-right: 0.75em;
-	}
 
 
 
