--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -84,9 +84,9 @@ html {
 	.hide {
 		//display: none !important;
 		visibility: hidden !important;
-		opacity: 0;
+		opacity: 0 !important;
 		// transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
-		height: 0;
+		height: 0 !important;
 		padding: 0!important;
 	}
 // hidden
